Implemented File/Open.
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@896 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -5,6 +5,7 @@ Changes for v1.99c
 - Typing when not in edit more will start edit mode and replace cell contents (Greg)
 - Create new interface, ButtonEnabler, and use it to improve logical separation between MacroDefinitionBox and MacroDialog. (Graham)
 - Implement Timed Macros (Graham)
+- Implement File/Open (Graham)
 
 Changes for v1.99b
 - Add support for warnings etc. below table without hiding the buttons, move device upgrade bug warning back down (Graham)
