--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -57,6 +57,9 @@ Changes for v2.00
 - Fix KM file filtering in Device Upgrade Editor open file dialog (Greg)
 - Fix key code keymove support (Greg)
 - Add installed upgrade selector to keymove editor, for upgrades that aren't assigned to a device button (Greg)
+- Add * after PID in Device tab to indicate a protocol upgrade will be installed with the device upgrade. (Greg)
+- More fixed for EFC5 handling of single-byte functions (Greg)
+- When decoding an E2image, don't associate keymoves to a device upgrade when the key is in the button map. (Greg)
 
 Changes for v1.99b
 - Add support for warnings etc. below table without hiding the buttons, move device upgrade bug warning back down (Graham)
