--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -65,6 +65,7 @@ Changes for v2.00
 - Add * after PID in Device tab to indicate a protocol upgrade will be installed with the device upgrade. (Greg)
 - More fixed for EFC5 handling of single-byte functions (Greg)
 - When decoding an E2image, don't associate keymoves to a device upgrade when the key is in the button map. (Greg)
+-- Preview 8 --
 
 Changes for v1.99b
 - Add support for warnings etc. below table without hiding the buttons, move device upgrade bug warning back down (Graham)
