--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -86,6 +86,7 @@ Changes for v2.00
 - Make deleting a manual protocol from the Protocols tab delete it also from ProtocolManager (Graham)
 - Prevent special function key moves being interpreted as EFCs when AdvCodeFormat=EFC (Graham)
 - Enable conversion between old and new S3C80 codes in both directions and ensure it occurs only when necessary (Graham)
+- In Manual Settings dialog, trim string before testing for "End" token, as trailing spaces were causing NumberFormatException (Graham)
 
 Changes for v1.99b
 - Add support for warnings etc. below table without hiding the buttons, move device upgrade bug warning back down (Graham)
