Amended DeviceUpgradeTableModel as changes made for custom protocols were inconsistent with earlier changes. Added an entry to ChangeLog that was missed in update 956.
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@957 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -94,6 +94,7 @@ Changes for v2.00
 - Add editable display of raw signal to Learned Signals Dialog and provide New facility (Graham)
 - Correct various matters to do with restrictions on allowed button bindings (Graham)
 - Correct bug that prevented attempts at raw download failing with a null pointer exception (Graham)
+- Handle remotes with a signature of fewer than 8 characters (Graham)
 
 Changes for v1.99b
 - Add support for warnings etc. below table without hiding the buttons, move device upgrade bug warning back down (Graham)
