- Fix bug in opening .ir file with device combiner as a protocol upgrade (Graham) - Minor refinement to conditions for retaining a protocol when deleting device upgrade or changing its protocol (Graham)
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@961 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -106,6 +106,7 @@ Changes for v2.00
 - If deleting a device upgrade would delete corresponding protocol upgrade, ask for confirmation (Graham)
 - If changing the protocol of a device upgrade would delete a protocol upgrade, add that upgrade to Protocols tab (Graham)
 - Prevent change of pid when editing protocol upgrade but not when cloning it (Graham)
+- Fix bug in opening .ir file with device combiner as a protocol upgrade (Graham)
 
 Changes for v1.99b
 - Add support for warnings etc. below table without hiding the buttons, move device upgrade bug warning back down (Graham)
