--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -97,7 +97,7 @@ Changes for v2.00
 - Handle remotes with a signature of fewer than 8 characters (Graham)
 - Handle special case of data format in remotes with empty upgrade section (Graham)
 - Circumvent a bug in jp1parallel.dll concerning uninitialized variables (Graham)
-- Key Moves tab: show attached keymoves using background color (light gray, dark gray when selected) (Greg)
+- Key Moves tab: show attached key moves using background color (light gray, dark gray when selected) (Greg)
 - Raw Data tab: Show modified bytes in bold only (no more red) (Greg)
 - Devices tab: Adjust column widths (Greg)
 - Handle multiple protocol upgrades with same pid, which occurs even though the remote can only access the first one (Graham)
@@ -107,12 +107,13 @@ Changes for v2.00
 - Prevent change of pid when editing protocol upgrade but not when cloning it (Graham)
 - Fix bug in opening .ir file that has device combiner as a protocol upgrade (Graham)
 - When downloading or opening a file, clear ProtocolManager of custom code and added protocols specific to previous configuration (Graham)
-- When migrating keymoves, avoid basing function names on keymove notes as notes such as names of other keys can cause errors (Graham)
+- When migrating key moves, avoid basing function names on keymove notes as notes such as names of other keys can cause errors (Graham)
 - Add an Edit Protocol button to the Devices tab (Graham)
 - Enable all protocols to be edited, adding/editing/removing custom code as required (Graham)
-- When editing a device upgrade, recognise and use any protocol present that will be treated by the remote as custom code (Graham)
+- When editing a device upgrade, recognize and use any protocol present that will be treated by the remote as custom code (Graham)
 - Handle the case of device upgrades where the protocol is missing, treating it as a form of custom code but marked with '-' rather than '*' (Graham)
 - Correct two places in protocols.ini where "VariantName" had a space between the two words (Graham)
+- Update JP1 USB library to v0.03 (Greg)
 - Correct bug causing Code Selector to malfunction after a change of remote (Graham)
 - Correct handling of derived protocols when loaded from a .rmir file (Graham)
 - Handle an issue with device types that can be caused by a malformed [DeviceTypes] section in RDF (Graham)
