- Fix NullPointerException when editing DeviceCombiner protocol (Graham)
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@977 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,6 @@
+Changes for v2.01
+- Fix NullPointerException when editing DeviceCombiner protocol (Graham)
+
 Changes for v2.00
 - Fix very minor issue with Fav/Scan, an overlooked difference between Macros and Fav/Scan. (Graham)
 - Split off a new class, MacroDefinitionBox, from MacroDialog to allow its re-use with Timed Macros. (Graham)
