--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,5 +1,6 @@
 Changes for v2.01
 - Fix NullPointerException when editing DeviceCombiner protocol (Graham)
+- Implement upgrade overflow into learned signal and advanced code regions (Graham)
 
 Changes for v2.00
 - Fix very minor issue with Fav/Scan, an overlooked difference between Macros and Fav/Scan. (Graham)
