- Improve the user of JDirectoryChooser with File/Set Directory menu (Graham) - Use JDirectoryChooser instead of JFileChooser when there are no RDF/Map files found on opening RemoteMaster (Graham)
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@985 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -8,6 +8,7 @@ Changes for v2.01
 - Implement highlighting (Graham)
 -- Alpha 2 --
 - Create File/Set Directory menu and implement entries to change RDF Path and Image Path (Graham)
+- Use JDirectoryChooser instead of JFileChooser when there are no RDF/Map files found on opening RemoteMaster (Graham)
 
 Changes for v2.00
 - Fix very minor issue with Fav/Scan, an overlooked difference between Macros and Fav/Scan. (Graham)
