--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -13,6 +13,8 @@ Changes for v2.01
 - Make highlighting an option, defaulting to off (Graham)
 -- Alpha 3 --
 - Create Advanced menu, add items Clean Upper Memory, Initialize to $00 and Initialize to $FF and implement them (Graham)
+- Add ExtInstall.jar as a referenced library and update build.xml to include it (Graham)
+- Add Install Extender item to File menu and implement it using procedures from ExtInstall.jar (Graham)
 
 Changes for v2.00
 - Fix very minor issue with Fav/Scan, an overlooked difference between Macros and Fav/Scan. (Graham)
