--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -28,9 +28,9 @@ Changes for v2.01
 - Move EFC5 column before EFC column on Functions tab for remotes that use EFC5. (Greg)
 -- Alpha 7 --
 - Prompt to save before exiting, downloading from remote, etc if data has changed (Graham) 
-- More copy'n'paste fixes
-- Refactor check for updates
-- Add check for updates to RMIR
+- More copy'n'paste fixes (Greg)
+- Refactor check for updates (Greg)
+- Add check for updates to RMIR (Greg)
 
 Changes for v2.00
 - Fix very minor issue with Fav/Scan, an overlooked difference between Macros and Fav/Scan. (Graham)
