Fix incorrect inclusion of protocol code in exported binary files
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@1043 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -11,6 +11,7 @@ Changes for v2.02
 -- Alpha 3 --
 - Enhancements to upload/download/memory initializations status
 - Upgrade to jp1usb.dll v0.031
+- Fix incorrect inclusion of protocol code in exported binary files
 
 Changes for v2.01
 -- Alpha --
