- Implemented disassembler in Manual Settings dialog (Graham)
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@1046 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -16,6 +16,8 @@ Changes for v2.02
 - Save changes to General Notes
 -- Alpha 5 --
 - When Highlighting is active, show as text in the Color column the number of bytes used by that item (Graham)
+-- Alpha 6 --
+- Implemented disassembler in Manual Settings dialog (Graham)
 
 Changes for v2.01
 -- Alpha --
