- Incorporate those predefined constants given in Protocol Builder read-me into the disassembler, using them in place of addresses where applicable (Graham) - Add comment column to disassembler and in it show some info about protocol data bytes (Graham) - Update version to 2.02 Alpha 8
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@1048 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -22,6 +22,9 @@ Changes for v2.02
 - Made code of built-in protocols visible in Manual Settings dialog, so that all protocols can be disassembled. (Graham)
 - Minor refinements to disassembler to handle certain error situations (Graham)
 - Corrected an error in protocols.ini, in that HCS08 code for NEC1 (pid 005A) had final byte E8 missing. (Graham)
+-- Alpha 8
+- Incorporate those predefined constants given in Protocol Builder read-me into the disassembler, using them in place of addresses where applicable (Graham)
+- Add comment column to disassembler and in it show some info about protocol data bytes (Graham)
 
 Changes for v2.01
 -- Alpha --
