- Restructure the disassembler code (Graham) - Add code for the main body of the assembler, though not yet linked to user interface (Graham)
git-svn-id: svn://svn.code.sf.net/p/controlremote/code/trunk/km@1060 bfc585dc-5255-483b-a5ca-a9bf5897b33d

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -52,6 +52,8 @@ Changes for v2.02
 - Block the ability to select a protocol when the remote has a different variant of the same protocol built in and there is no Alternate PID (Graham)
 - Change the display of PFn Details to use drop-down boxes instead of plain text (Graham)
 - When editing a protocol, enter Manual Settings with the code for processor of current remote selected (Graham)
+- Restructure the disassembler code (Graham)
+- Add code for the main body of the assembler, though not yet linked to user interface (Graham)
 
 Changes for v2.01
 -- Alpha --
